# learn-ocaml-autogen

./: .travis-autogen.sh  .travis.yml  LICENSE  Makefile  README.md  learn-ocaml-autogen.opam  mapper.ml  mapper_solution.ml  mapper_template.ml  mapper_test.ml  opam  run-tests
doc/: advanced-features.md  annotations.md  how-to-define-samplers.md  how-to-write-an-exercise-with-autogen.md  installation.md  usage.md  use.md  write_ex.md
src/: autogen.ml  builders.ml  ftype.ml  mapper.ml  mapper_meta.ml  mapper_prelude.ml  mapper_prepare.ml  mapper_solution.ml  mapper_template.ml  mapper_test.ml  ptype.ml  sampler.ml  samplers.ml
tests/: README.md  run-tests
tests/everything/: input.ml  sol_prelude.ml  sol_prepare.ml  sol_solution.ml  sol_template.ml  sol_test.ml
tests/letand/: input.ml  sol_prelude.ml  sol_solution.ml  sol_template.ml  sol_test.ml
tests/meta/: input.ml  ptree_input.ml  sol_meta.json  sol_template.ml  sol_test.ml
tests/parameters/: input.ml  sol_solution.ml  sol_template.ml  sol_test.ml
tests/polymorphism/: input.ml  sol_solution.ml  sol_template.ml  sol_test.ml
tests/polymorphism_options/: input.ml  sol_solution.ml  sol_template.ml  sol_test.ml
tests/polymorphism_tree/: input.ml  sol_prelude.ml  sol_solution.ml  sol_template.ml  sol_test.ml
tests/prelude_prepare/: input.ml  sol_prelude.ml
tests/prelude_prepare_test/: input.ml  sol_prelude.ml  sol_test.ml
tests/rec/: input.ml  sol_prelude.ml  sol_prepare.ml  sol_solution.ml  sol_template.ml  sol_test.ml
tests/sampler/: input.ml  sol_solution.ml  sol_template.ml  sol_test.ml
(+40 files in other folders)
